Fix for IE7
Also fixes cutoff gradients in IE7

Fixes #64

--- a/template/templates/soh/css/modules.css
+++ b/template/templates/soh/css/modules.css
@@ -26,6 +26,7 @@
 	margin: 0 -13px 0 -38px;
 	padding-bottom: 18px;
 	background: url(../images/modules/popup-bg1.png) bottom no-repeat;
+	zoom: 1;
 }
 .module.popout > div {
 	padding: 10px 25px 15px;
